--- a/website/index.html
+++ b/website/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <div class="c-cursor"></div>
+    <div class="c-cursor-dot"></div>
     <div class="glow-bg"></div>
 
     <header class="header">
