--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,17 @@
 </head>
 
 <body>
-    <div class="glow-bg"></div>
+    <!-- Dynamic Background & Noise -->
+    <div class="noise-overlay"></div>
+    <div class="glow-bg">
+        <div class="orb orb-1"></div>
+        <div class="orb orb-2"></div>
+        <div class="orb orb-3"></div>
+    </div>
+
+    <!-- Custom Cursor -->
+    <div class="cursor-dot"></div>
+    <div class="cursor-outline"></div>
 
     <header class="header">
         <div class="container">
