--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,8 @@
                 <div class="nav-links">
                     <a href="#features">Возможности</a>
                     <a href="#analytics">Аналитика</a>
-                    <a href="#download" class="btn btn-primary">Скачать</a>
+                    <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.6.5/app-v0.6.5.apk"
+                        class="btn btn-primary">Скачать</a>
                 </div>
             </nav>
         </div>
@@ -52,8 +53,10 @@
                     <p class="hero-subtitle">Премиальный помощник для автоматического контроля бюджета, анализа
                         расходов и финансового планирования. Все банки в одном приложении.</p>
                     <div class="hero-actions">
-                        <a href="#download" class="btn btn-large btn-neon">Попробовать бесплатно</a>
-                        <a href="https://github.com/xgtnsk" target="_blank" class="btn btn-large btn-outline">Проект на
+                        <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.6.5/app-v0.6.5.apk"
+                            class="btn btn-large btn-neon">Попробовать бесплатно</a>
+                        <a href="https://github.com/xgtnsk/ii-finansist-website" target="_blank"
+                            class="btn btn-large btn-outline">Проект на
                             GitHub</a>
                     </div>
                 </div>
@@ -230,7 +233,10 @@
                         бюджет II Финансисту.</p>
                     <div class="download-buttons">
                         <a href="#" class="btn btn-large btn-neon">RuStore</a>
-                        <a href="#" class="btn btn-large btn-outline">GitHub Repository</a>
+                        <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.6.5/app-v0.6.5.apk"
+                            class="btn btn-large btn-neon">Скачать APK</a>
+                        <a href="https://github.com/xgtnsk/ii-finansist-website"
+                            class="btn btn-large btn-outline">GitHub Repository</a>
                     </div>
                 </div>
             </div>
