Standardize buttons across the site

--- a/website/index.html
+++ b/website/index.html
@@ -56,8 +56,7 @@
                         <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.16.0/app-v0.6.5.apk"
                             class="btn btn-large btn-neon">Попробовать бесплатно</a>
                         <a href="https://github.com/xgtnsk/ii-finansist-website" target="_blank"
-                            class="btn btn-large btn-outline">Проект на
-                            GitHub</a>
+                            class="btn btn-large btn-neon">Проект на GitHub</a>
                     </div>
                 </div>
                 <div class="hero-visual">
@@ -232,11 +231,11 @@
                     <p class="download-subtitle">Присоединяйтесь к тысячам пользователей, которые уже доверили свой
                         бюджет II Финансисту.</p>
                     <div class="download-buttons">
-                        <a href="#" class="btn btn-large btn-neon">RuStore</a>
+                        <a href="https://www.rustore.ru" class="btn btn-large btn-neon">RuStore</a>
                         <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.16.0/app-v0.6.5.apk"
                             class="btn btn-large btn-neon">Скачать APK</a>
-                        <a href="https://github.com/xgtnsk/ii-finansist-website"
-                            class="btn btn-large btn-outline">GitHub Repository</a>
+                        <a href="https://github.com/xgtnsk/ii-finansist-website" class="btn btn-large btn-neon">GitHub
+                            Репозиторий</a>
                     </div>
                 </div>
             </div>
