--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@
                 <div class="nav-links">
                     <a href="#features">Возможности</a>
                     <a href="#analytics">Аналитика</a>
-                    <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.16.0/ii-finansist-v0.16.0.apk"
+                    <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.16.0-site-public/ii-finansist-v0.16.0-site-public.apk"
                         class="btn btn-primary">Скачать</a>
                 </div>
             </nav>
@@ -53,7 +53,7 @@
                     <p class="hero-subtitle">Премиальный помощник для автоматического контроля бюджета, анализа
                         расходов и финансового планирования. Все банки в одном приложении.</p>
                     <div class="hero-actions">
-                        <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.16.0/ii-finansist-v0.16.0.apk"
+                        <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.16.0-site-public/ii-finansist-v0.16.0-site-public.apk"
                             class="btn btn-large btn-neon">Попробовать бесплатно</a>
                         <a href="https://github.com/xgtnsk/ii-finansist-website" target="_blank"
                             class="btn btn-large btn-neon">Проект на GitHub</a>
@@ -232,7 +232,7 @@
                         бюджет II Финансисту.</p>
                     <div class="download-buttons">
                         <a href="https://www.rustore.ru" class="btn btn-large btn-neon">RuStore</a>
-                        <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.16.0/ii-finansist-v0.16.0.apk"
+                        <a href="https://github.com/xgtnsk/ii-finansist-website/releases/download/v0.16.0-site-public/ii-finansist-v0.16.0-site-public.apk"
                             class="btn btn-large btn-neon">Скачать APK</a>
                         <a href="https://github.com/xgtnsk/ii-finansist-website" class="btn btn-large btn-neon">GitHub
                             Репозиторий</a>
