--- a/website/index.html
+++ b/website/index.html
@@ -58,6 +58,8 @@
                         <a href="https://github.com/xgtnsk/ii-finansist-website" target="_blank"
                             class="btn btn-large btn-neon">Проект на GitHub</a>
                     </div>
+                    <p class="trial-note" style="margin-top: 15px; opacity: 0.6; font-size: 0.85rem;">* Публичная версия
+                        работает в режиме ознакомления (7 дней)</p>
                 </div>
                 <div class="hero-visual">
                     <div class="phone-mockup">
@@ -237,6 +239,8 @@
                         <a href="https://github.com/xgtnsk/ii-finansist-website" class="btn btn-large btn-neon">GitHub
                             Репозиторий</a>
                     </div>
+                    <p class="trial-info-text" style="margin-top: 20px; opacity: 0.7; font-size: 0.9rem;">* Доступна
+                        пробная версия с полным функционалом на 7 дней.</p>
                 </div>
             </div>
         </section>
