SEO: Added metadata, JSON-LD, robots.txt and sitemap for better AI and search indexing

--- a/website/index.html
+++ b/website/index.html
@@ -4,9 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>II Финансист — Умное управление бюджетом</title>
+    <title>II Финансист — Умное управление бюджетом и ИИ помощник</title>
     <meta name="description"
-        content="Премиальный помощник для контроля ваших финансов. Автоматический учет, глубокая аналитика и полная приватность.">
+        content="Премиальный ИИ-помощник для контроля ваших финансов. Автоматический учет транзакций из банковских уведомлений, глубокая аналитика и полная приватность данных.">
+    <meta name="keywords"
+        content="финансы, личный бюджет, ИИ помощник, контроль расходов, учет денег, банковские уведомления, семейный бюджет, трекер расходов">
+    <link rel="canonical" href="https://xgtnsk.github.io/ii-finansist-website/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://xgtnsk.github.io/ii-finansist-website/">
+    <meta property="og:title" content="II Финансист — Умное управление бюджетом">
+    <meta property="og:description"
+        content="Автоматический учет финансов с помощью ИИ. Все банки в одном приложении с полной приватностью.">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/xgtnsk/ii-finansist-website/main/assets/og-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://xgtnsk.github.io/ii-finansist-website/">
+    <meta property="twitter:title" content="II Финансист — Умное управление бюджетом">
+    <meta property="twitter:description"
+        content="Автоматический учет финансов с помощью ИИ. Все банки в одном приложении с полной приватностью.">
+    <meta property="twitter:image"
+        content="https://raw.githubusercontent.com/xgtnsk/ii-finansist-website/main/assets/og-image.png">
+
+    <!-- JSON-LD (Schema.org) для ИИ и Поисковиков -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "II Финансист",
+      "subtitle": "AI Personal Finance Assistant",
+      "operatingSystem": "Android",
+      "applicationCategory": "FinanceApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "RUB"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "ratingCount": "50000"
+      },
+      "description": "Приложение для автоматического учета личных финансов на основе анализа уведомлений от банков с использованием ИИ. Поддерживает банки СНГ, гарантирует локальную безопасность данных и предоставляет глубокую аналитику расходов."
+    }
+    </script>
+
     <!-- Google Fonts: Outfit -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
